--- a/TaskManager/ClientApp/src/app/tasks-list/tasks-list.component.html
+++ b/TaskManager/ClientApp/src/app/tasks-list/tasks-list.component.html
@@ -19,6 +19,10 @@
 
 <!--Active tasks-->
 
+<div>
+  <h3>Project: name will add later</h3>
+</div>
+
 <div class="accordion">
   <br />
   <h3>Active Tasks</h3>
