--- a/TaskManager/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/TaskManager/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -37,6 +37,10 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/register-user']">Register</a>
           </li>
+
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/login']">Login</a>
+          </li>
         </ul>
       </div>
     </div>
