made projects and users many to many in entity framework

--- a/TaskManager/ClientApp/src/app/projects/projects.component.html
+++ b/TaskManager/ClientApp/src/app/projects/projects.component.html
@@ -11,11 +11,11 @@
 <div>
   <h2>User-Assigned Projects</h2>
 </div>
-<div>
+<div *ngFor="let project of projectTaskList">
   <!--*ngFor="let project of projectTaskList"-->
 
-  <!--<p>{{project.projectName}}</p>-->
-  <span> {{projectTaskList[0].projectName}}</span>
+  <p>{{project.projectName}}</p>
+  <!--<span> {{projectTaskList[0].projectName}}</span>-->
 </div>
 
 <div>
