--- a/TaskManager/ClientApp/src/app/testing-dialog/testing-dialog.component.html
+++ b/TaskManager/ClientApp/src/app/testing-dialog/testing-dialog.component.html
@@ -1,4 +1,19 @@
-<h2 mat-dialog-title>{{data?.title}}</h2>
+<!--<h1 mat-dialog-title>Hi</h1>
+<div mat-dialog-content>
+  <p>What's your favorite animal?</p>
+  <mat-form-field appearance="fill">
+    <mat-label>Favorite Animal</mat-label>
+    <input matInput [(ngModel)]="data.animal">
+  </mat-form-field>
+</div>
+<div mat-dialog-actions>
+  <button mat-button (click)="onNoClick()">No Thanks</button>
+  <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button>
+</div>
+-->
+
+
+<h2 mat-dialog-title>{{data.title}}</h2>
 
 <div mat-dialog-content>
   <p>lorem ipsum</p>
@@ -9,11 +24,22 @@
   <button mat-button [mat-dialog-close]="'CLOSE'">Confirm</button>
 </div>
 
-<!--<h1 mat-dialog-title>Hello There</h1>
-<div mat-dialog-content>
-  <p>This Is a Simple Dialog</p>
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="close()">Close</button>
-</div>-->
 
+<!--<h2 mat-dialog-title>{{description}}</h2>
+
+<mat-dialog-content [formGroup]="form">
+
+  <mat-form-field>
+    <input matInput
+           placeholder="Course Description"
+           formControlName="description">
+  </mat-form-field>
+  ....
+
+</mat-dialog-content>
+
+<mat-dialog-actions>
+  <button class="mat-raised-button" (click)="close()">Close</button>
+  <button class="mat-raised-button mat-primary" (click)="save()">Save</button>
+</mat-dialog-actions>
+-->
