--- a/TaskManager/ClientApp/src/app/assign-user-project/assign-user-project.component.html
+++ b/TaskManager/ClientApp/src/app/assign-user-project/assign-user-project.component.html
@@ -60,10 +60,11 @@
 
 
     </div>
-    
+
     <div class="d-flex justify-content-center center">
       <button (click)="assignUser()" type="submit" class="btn btn-primary">Submit <i class="fa fa-sign-in" aria-hidden="true"></i></button>
     </div>
+    <!--<div *ngIf=alreadyAssignedError><p>User is already assigned to project.</p></div>-->
   </div>
 </form>
 
