--- a/TaskManager/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/TaskManager/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -27,7 +27,28 @@
           </li>
 
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/project']">Project</a>
+            <a class="nav-link text-dark" [routerLink]="['/project-admin']">Project Admin</a>
+          </li>
+
+          <!--<li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/project-user']">Project</a>
+          </li>
+-->
+
+
+          <!--I want to do a for loop to show the projects available(implement a dropdown search) that will populate the buttons
+
+            When a button is clicked, it'll send the projectId
+
+            -->
+          <li>
+            <!-- #docregion mat-menu-trigger-for -->
+            <button mat-button [matMenuTriggerFor]="menu">Project</button>
+            <!-- #enddocregion mat-menu-trigger-for -->
+            <mat-menu #menu="matMenu" >
+              <button mat-menu-item class="nav-link text-dark" [routerLink]="['/project-user']">Name of the individual projects</button>
+              <button mat-menu-item>Item 2</button>
+            </mat-menu>
           </li>
 
           <li class="nav-item" [routerLinkActive]="['link-active']">
