--- a/TaskManager/ClientApp/src/app/edit-task/edit-task.component.html
+++ b/TaskManager/ClientApp/src/app/edit-task/edit-task.component.html
@@ -1,14 +1,21 @@
+<div>
+  To Do:
+  <ul>
+    <li>Allow for empty strings for description, assignment, priority</li>
+    <li>drop-down for priority - tshirt sizes (xs, s, m, l, xl)</li>
+    <li>fix warnings. worked before?</li>
+  </ul>
+</div>
+
 <h2 style="text-align: center;">Edit Task</h2>
 <!--sets formGroup to the form property in add-task.component.ts-->
 <form [formGroup]="form" (ngSubmit)="editTask()">
   <div *ngFor="let task of tasksList" class="container d-grid gap-3" style="max-width: 700px;">
 
-    <div class="form-floating">
+    <div>
       <!--formControlName="email" binds to formGroup 'form'-->
       <!--blur fires when an element loses focus-->
-      <input class="form-control" formControlName="name" placeholder="Task Name" type="text" />
-      <label for="name">{{task.name}}</label>
-      
+      <input class="form-control" formControlName="name" placeholder="{{task.name}}" type="text" />
 
       <div class="invalid-feedback d-block"
            *ngIf="form.controls.name.invalid && (form.controls.name.dirty || form.controls.name.touched)">
@@ -19,9 +26,8 @@
 
     </div>
 
-    <div class="form-floating">
-      <input formControlName="description" class="form-control" type="text" id="description" placeholder="Description" />
-      <label class="form-label" for="description">{{task.description}}</label>
+    <div>
+      <input formControlName="description" class="form-control" type="text" id="description" placeholder="{{task.description}}" />
 
       <div class="invalid-feedback d-block"
            *ngIf="form.controls.description.invalid && (form.controls.description.dirty || form.controls.description.touched)">
@@ -32,7 +38,7 @@
 
     </div>
 
-    <div class="d-grid gap-3">
+
       <!--
           <div class="form-floating">
             <input formControlName="dueDate" class="form-control" id="dueDate" placeholder="Due Date" />
@@ -45,10 +51,9 @@
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>-->
 
-      <div class="form-floating">
+      <div>
 
-        <input formControlName="assignedEmail" class="form-control" type="text" id="firstName" placeholder="First Name" />
-        <label class="form-label" for="assignedEmail">{{task.assignedEmail}}</label>
+        <input formControlName="assignedEmail" class="form-control" type="text" id="firstName" placeholder="{{task.assignedEmail}}" />
 
         <div class="invalid-feedback d-block"
              *ngIf="form.controls.assignedEmail.invalid && (form.controls.assignedEmail.dirty || form.controls.assignedEmail.touched)">
@@ -64,9 +69,8 @@
 
 
 
-      <div class="form-floating">
-        <input formControlName="priority" placeholder="Priority" class="form-control" id="priority" type="text" />
-        <label class="form-label" for="priority">{{task.priority}}</label>
+      <div>
+        <input formControlName="priority" placeholder="{{task.priority}}" class="form-control" id="priority" type="text" />
 
         <div class="invalid-feedback d-block"
              *ngIf="form.controls.priority.invalid && (form.controls.priority.dirty || form.controls.priority.touched)">
@@ -79,7 +83,7 @@
       </div>
 
 
-    </div>
+
     <div class="d-flex justify-content-center center">
       <!--(click)="addTask()"-->
       <button type="submit" class="btn btn-primary">Submit <i class="fa fa-sign-in" aria-hidden="true"></i></button>
