--- a/TaskManager/ClientApp/src/app/project-user/project-user.component.html
+++ b/TaskManager/ClientApp/src/app/project-user/project-user.component.html
@@ -1,1 +1,76 @@
-<p>project-user works!</p>
+<div>
+  To Do:
+  <ul>
+    <li>Click to edit each element of a task</li>
+    <li>Check box strikes through all text for that task and marks the task complete</li>
+    <li>Sort by Priority</li>
+    <li>Fix selectionChange. Will only load tasks for the first project selected</li>
+  </ul>
+</div>
+
+
+<div>
+  <mat-form-field appearance="fill">
+    <mat-label>Project</mat-label>
+    <mat-select [formControl]="projectRmControl" (selectionChange)="getId($event.value)">
+      <!-- required-->
+      <mat-option>--</mat-option>
+      <mat-option *ngFor="let project of projectList" [value]="project.projectId">
+        {{project.projectName}}
+      </mat-option>
+    </mat-select>
+    <mat-error *ngIf="projectRmControl.hasError('required')">Please choose a project</mat-error>
+    <mat-hint>{{projectRmControl.value?.projectId}}</mat-hint>
+  </mat-form-field>
+
+</div>
+
+
+<form>
+  <ng-container *ngIf="show">
+    <div id="tasksDiv" class="accordion">
+      <br />
+      <h3>Tasks</h3>
+      <table class="table table-hover" data-resizable="true">
+        <thead>
+          <tr id="task-table-headers">
+            <th scope="col"></th>
+            <th scope="col">Task Name</th>
+            <th scope="col">Description</th>
+            <!--<th scope="col">Due Date</th>-->
+            <th scope="col">Assigned</th>
+            <th scope="col">Priority</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let tasks of projectTaskList">
+            <!--[(ngModel)]="task.selected"-->
+            <th scope="row">
+              <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">
+              <!--<mat-checkbox >
+              </mat-checkbox>-->
+              <!--[checked]="allComplete"
+                              [color]="task.color"
+                              [indeterminate]="someComplete()"
+                              (change)="setAll($event.checked)"-->
+            </th>
+            <td>
+              <input formControlName="taskName" class="form-control" type="text" id="firstName" placeholder="{{tasks.taskName}}"  />
+            </td>
+            <td>
+              <input formControlName="taskDescription" class="form-control" type="text" id="firstName" placeholder="{{tasks.taskDescription}}" />
+            </td>
+            <td>
+              <input formControlName="firstLastName" class="form-control" type="text" id="firstName" placeholder="{{tasks.assignedFirstName}} {{tasks.assignedLastName}}" />
+            </td>
+            <td>
+              <input formControlName="taskPriority" class="form-control" type="text" id="firstName" placeholder="{{tasks.priority}}" />
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </ng-container>
+</form>
